2008-07-29  Emmanuele Bassi  <ebassi@openedhand.com>

	* src/launcher/hd-task-launcher.c:
	(launch_item),
	(hd_task_launcher_real_item_clicked): Update the animation of
	the application launcher; now it will use the right actor as
	the starting point of the "growing" animation.

2008-07-29  Emmanuele Bassi  <ebassi@openedhand.com>

	* src/launcher/Makefile.am:

	* src/launcher/hd-launcher-item.c: Remove unused effect template.

	* src/launcher/test-launcher.c: Move the application launcher
	animation from here...

	* src/launcher/hd-task-launcher.c: ... to here, where it belongs.

	* src/launcher/tidy/Makefile.am:
	* src/launcher/tidy/tidy-animation.[ch]:
	* src/launcher/tidy/tidy-interval.[ch]: Add tweening API for
	Tidy.

2008-07-29  Emmanuele Bassi  <ebassi@openedhand.com>

	* src/launcher/hd-task-launcher-private.h:
	* src/launcher/hd-task-launcher.c: Small clean ups.

2008-07-29  Emmanuele Bassi  <ebassi@openedhand.com>

	* src/launcher/tidy/tidy-scroll-view.c:
	(tidy_stylable_iface_init): Make the scroll bars slighly less
	big.

2008-07-29  Emmanuele Bassi  <ebassi@openedhand.com>

	* src/launcher/hd-task-launcher.c: Update the adjustment range
	each time a launcher has been added to the HdTaskLauncher.

	* src/launcher/tidy/tidy-scroll-bar.c: Resync from tidy trunk
	to fix a segmentation fault.

2008-07-28  Emmanuele Bassi  <ebassi@openedhand.com>

	* src/launcher/Makefile.am:
	* src/launcher/main.c:
	* src/launcher/test-launcher.c: Rename the test-launcher source
	file.

2008-07-28 Robert Bragg  <bob@o-hand.com>
	
	* src/launcher/tidy/Makefile.am:
	support out of tree builds

2008-07-28  Emmanuele Bassi  <ebassi@openedhand.com>

	* src/launcher/hd-task-launcher.c:
	(hd_task_launcher_get_preferred_height),
	(hd_task_launcher_class_init): Compute the preferred height for the
	task launcher.

2008-07-28  Emmanuele Bassi  <ebassi@openedhand.com>

	Integrate the launcher in SVN. This is an initial implementation